deploy/workloads/hospital-backend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hospital-backend
  labels:
    app.kubernetes.io/name: hospital-backend
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: hospital
    app.kubernetes.io/managed-by: argocd
    app.kubernetes.io/version: 1.0.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: hospital-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hospital-backend
        app.kubernetes.io/component: backend
        app.kubernetes.io/part-of: hospital
        app.kubernetes.io/managed-by: argocd
        app.kubernetes.io/version: 1.0.0
    spec:
      imagePullSecrets:
        - name: nexus-registry-secret
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: hospital-backend
                topologyKey: kubernetes.io/hostname
      securityContext:
        runAsNonRoot: true
        runAsUser: 1654
        fsGroup: 2000
      volumes:
        - name: be-uploads
          emptyDir: {}
      containers:
        - name: hospital-backend
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          image: 100.112.150.56:8082/ecr-be:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: be-uploads
              mountPath: /app/wwwroot/uploads
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            periodSeconds: 20
          startupProbe:
            httpGet:
              path: /healthz
              port: 8080
            periodSeconds: 5
            failureThreshold: 18
          resources:
            requests:
              cpu: 250m
              memory: 384Mi
            limits:
              cpu: "1"
              memory: 768Mi
