deploy/workloads/hospital-backend/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hospital-backend-default-deny
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: hospital-backend
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-fe-traefik-to-be
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: hospital-backend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app: traefik
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: hospital-frontend
      ports:
        - protocol: TCP
          port: 8080
